<resources>
    <string name="breweries_child" translatable="false">breweries</string>
    <string name="beer_list_entries_child" translatable="false">beers</string>
    <string name="app_name">Beer List</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="brewery_name">Brewery\'s name</string>
    <string name="brewery_name_hint">Name without legal form</string>
    <string name="brewery_location">Address or coordinates</string>
    <string name="brewery_location_hint">Sample Street 5, Beertown 12354</string>
    <string name="brewery_confirm_add">Add</string>
    <string name="testers">Testers</string>
    <string name="breweries">Breweries</string>
    <string name="beers">Beers</string>
    <string name="add_beer">Add a new beer</string>
    <string name="beer_name">Name</string>
    <string name="beer_type">Type</string>
    <string name="name_without_brewery">Name without brewery</string>
    <string-array name="beer_types">
        <item>n/a</item>
        <item>Helles</item>
        <item>Dunkles</item>
        <item>Pils</item>
        <item>Weizen</item>
    </string-array>
</resources>
